--- a/bikcraft/about.html
+++ b/bikcraft/about.html
@@ -25,7 +25,7 @@
                <li><a href="about.html" class="active-menu">About</a></li>
                <li><a href="product.html">Product</a></li>
                <li><a href="portifolio.html">Portfolio</a></li>
-               <li><a href=/contact.html">contact</a></li>
+               <li><a href="contact.html">contact</a></li>
             </ul>
 
          </nav>
