--- a/bikcraft/index.html
+++ b/bikcraft/index.html
@@ -24,7 +24,7 @@
                <li><a href="about.html">About</a></li>
                <li><a href="product.html">Product</a></li>
                <li><a href="portifolio.html">Portfolio</a></li>
-               <li><a href=/contact.html">contact</a></li>
+               <li><a href="contact.html">contact</a></li>
             </ul>
 
          </nav>
