--- a/bikcraft/product.html
+++ b/bikcraft/product.html
@@ -25,7 +25,7 @@
                <li><a href="about.html">About</a></li>
                <li><a href="product.html" class="active-menu">Product</a></li>
                <li><a href="portifolio.html">Portfolio</a></li>
-               <li><a href=/contact.html">contact</a></li>
+               <li><a href="contact.html">contact</a></li>
             </ul>
 
          </nav>
