Adding slide script

--- a/bikcraft/index.html
+++ b/bikcraft/index.html
@@ -11,6 +11,7 @@
    <link rel="stylesheet" href="/css/grid.css">
    <link rel="stylesheet" href="/css/style.css">
    <link rel="stylesheet" href="/css/responsive.css">
+   <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body>
@@ -169,6 +170,9 @@
          </div>
       </div>
    </footer>
+
+   <script src="./js/simple-slide.js"></script>
+   <script src="./js/script.js"></script>
 </body>
 
 </html>
