--- a/bikcraft/portifolio.html
+++ b/bikcraft/portifolio.html
@@ -12,6 +12,7 @@
    <link rel="stylesheet" href="/css/style.css">
    <link rel="stylesheet" href="/css/portifolio.css">
    <link rel="stylesheet" href="/css/responsive.css">
+   <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body>
@@ -41,18 +42,33 @@
       </div>
    </section>
 
-   <section class="portifolio-quote container">
+   <section class="portifolio-quote container" data-slide="quote">
       <blockquote class="portifolio-quote-text ">
          <p>"In today's world, the continued expansion of our
             activity plays an essential role in the formulation of the
             innovative management of which we are part."</p>
-         <cite>Barbara Moss</cite>
+         <cite>Barbara Moss 1</cite>
       </blockquote>
+
+      <blockquote class="portifolio-quote-text ">
+         <p>"In today's world, the continued expansion of our
+            activity plays an essential role in the formulation of the
+            innovative management of which we are part."</p>
+         <cite>Barbara Moss 2</cite>
+      </blockquote>
+
+      <blockquote class="portifolio-quote-text ">
+         <p>"In today's world, the continued expansion of our
+            activity plays an essential role in the formulation of the
+            innovative management of which we are part."</p>
+         <cite>Barbara Moss 3</cite>
+      </blockquote>
+
    </section>
 
 
    <section class="portifolio">
-      <div class="container">
+      <div class="container" data-slide="portifolio">
          <ul class="portifolio-items">
             <li class="grid-8">
                <img src="/img/portifolio-hide.jpg" alt="Bikcraft Retro">
@@ -64,6 +80,19 @@
                <img src="/img/portifolio-sport.jpg" alt="Bikcraft Sport">
             </li>
          </ul>
+
+         <ul class="portifolio-items">
+            <li class="grid-8">
+               <img src="/img/portifolio-retro.jpg" alt="Bikcraft Retro">
+            </li>
+            <li class="grid-8">
+               <img src="/img/portifolio-hide.jpg" alt="Bikcraft Ride">
+            </li>
+            <li class="grid-16">
+               <img src="/img/portifolio-sport.jpg" alt="Bikcraft Sport">
+            </li>
+         </ul>
+
       </div>
    </section>
 
@@ -109,6 +138,12 @@
          </div>
       </div>
    </footer>
+
+
+   <script src="./js/simple-slide.js"></script>
+   <script src="./js/script.js"></script>
+
+
 </body>
 
 </html>
