--- a/bikcraft/product.html
+++ b/bikcraft/product.html
@@ -12,6 +12,7 @@
    <link rel="stylesheet" href="/css/style.css">
    <link rel="stylesheet" href="/css/product.css">
    <link rel="stylesheet" href="/css/responsive.css">
+   <script>document.documentElement.classList.add("js");</script>
 </head>
 
 <body>
