Add animations and mailer lib

--- a/bikcraft/about.html
+++ b/bikcraft/about.html
@@ -37,8 +37,8 @@
 
    <section class="introduction introduction-pages introduction-about">
       <div class="container">
-         <h1>about</h1>
-         <p>Learn more about Bikcraft</p>
+         <h1 data-anime="500" class="fadeInDown">about</h1>
+         <p data-anime="1000" class="fadeInDown">Learn more about Bikcraft</p>
       </div>
    </section>
 
@@ -130,6 +130,10 @@
          </div>
       </div>
    </footer>
+
+   <script src="./js/simple-anime.js"></script>
+   <script src="./js/script.js"></script>
+
 </body>
 
 </html>
