--- a/bikcraft/contact.html
+++ b/bikcraft/contact.html
@@ -37,8 +37,8 @@
 
    <section class="introduction introduction-pages introduction-contact">
       <div class="container">
-         <h1>contact</h1>
-         <p>ask your questions with us</p>
+         <h1 data-anime="500" class="fadeInDown">contact</h1>
+         <p data-anime="1000" class="fadeInDown">ask your questions with us</p>
       </div>
    </section>
 
@@ -132,6 +132,10 @@
          </div>
       </div>
    </footer>
+
+   <script src="./js/simple-anime.js"></script>
+   <script src="./js/script.js"></script>
+
 </body>
 
 </html>
