--- a/bikcraft/index.html
+++ b/bikcraft/index.html
@@ -36,12 +36,12 @@
 
    <section class="introduction introduction-home">
       <div class="container">
-         <h1>Handmade Bicycles</h1>
-         <blockquote class="quote-text">
+         <h1 data-anime="500" class="fadeInDown">Handmade Bicycles</h1>
+         <blockquote class="quote-text fadeInDown" data-anime="1000">
             <p>"Have nothing in your house that you do not know to be useful, or believe to be beautiful"</p>
             <cite>WILLIAM MORRIS</cite>
          </blockquote>
-         <a href="/products.html" class="btn">PRICES</a>
+         <a data-anime="1500" href="/products.html" class="btn">PRICES</a>
       </div>
    </section>
 
@@ -171,7 +171,7 @@
       </div>
    </footer>
 
-   <script src="./js/simple-slide.js"></script>
+   <script src="./js/simple-anime.js"></script>
    <script src="./js/script.js"></script>
 </body>
 
