--- a/bikcraft/portifolio.html
+++ b/bikcraft/portifolio.html
@@ -37,8 +37,8 @@
 
    <section class="introduction introduction-pages introduction-portifolio">
       <div class="container">
-         <h1>portifolio</h1>
-         <p>Get to know the projects we love to show</p>
+         <h1 data-anime="500" class="fadeInDown">portifolio</h1>
+         <p data-anime="1000" class="fadeInDown">Get to know the projects we love to show</p>
       </div>
    </section>
 
@@ -139,7 +139,7 @@
       </div>
    </footer>
 
-
+   <script src="./js/simple-anime.js"></script>
    <script src="./js/simple-slide.js"></script>
    <script src="./js/script.js"></script>
 
