--- a/bikcraft/product.html
+++ b/bikcraft/product.html
@@ -37,8 +37,8 @@
 
    <section class="introduction introduction-pages introduction-product">
       <div class="container">
-         <h1>products</h1>
-         <p>Learn more about our products</p>
+         <h1 data-anime="500" class="fadeInDown">products</h1>
+         <p data-anime="1000" class="fadeInDown">Learn more about our products</p>
       </div>
    </section>
 
@@ -199,6 +199,10 @@
          </div>
       </div>
    </footer>
+
+   <script src="./js/simple-anime.js"></script>
+   <script src="./js/script.js"></script>
+
 </body>
 
 </html>
