--- a/CSS Flexbox/flexblog/index.html
+++ b/CSS Flexbox/flexblog/index.html
@@ -29,10 +29,10 @@
    <header class="menu-bg">
       <div class="menu">
          <div class="menu-logo">
-            <a href="">flegblog/a>
+            <a href="">FlexBlog</a>
          </div>
 
-         <nav class="nav">
+         <nav class="menu-nav">
             <ul>
                <li><a href="#sobre">Sobre</a></li>
                <li><a href="#produtos">Produtos</a></li>
