More configurations in FlexBlog

--- a/CSS Flexbox/flexblog/index.html
+++ b/CSS Flexbox/flexblog/index.html
@@ -51,11 +51,11 @@
          <p>O que temos que ter sempre em mente é que a determinação clara de abjetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas objetivos.</p>
          <p>O que temos que ter sempre em mente é que a determinação clara de abjetivos afeta positivamente a correta previsão das condições inegavelmente apropriadas objetivos.</p>
       </div>
-      <div>
-         <img src="./img/sobre1.jpg" alt="sobre1" class="sobre-img">
+      <div class="sobre-img">
+         <img src="./img/sobre1.jpg" alt="sobre1">
       </div>
-      <div>
-         <img src="./img/sobre2.jpg" alt="sobre2" class="sobre-img">
+      <div class="sobre-img">
+         <img src="./img/sobre2.jpg" alt="sobre2">
       </div>
    </section>
 
