fix: fix image address

--- a/Web-Desing-Completo/bikcraft/portifolio.html
+++ b/Web-Desing-Completo/bikcraft/portifolio.html
@@ -6,12 +6,12 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Bikcraft - about</title>
-   <link rel="stylesheet" href="/css/normalize.css">
-   <link rel="stylesheet" href="/css/reset.css">
-   <link rel="stylesheet" href="/css/grid.css">
-   <link rel="stylesheet" href="/css/style.css">
-   <link rel="stylesheet" href="/css/portifolio.css">
-   <link rel="stylesheet" href="/css/responsive.css">
+   <link rel="stylesheet" href="./css/normalize.css">
+   <link rel="stylesheet" href="./css/reset.css">
+   <link rel="stylesheet" href="./css/grid.css">
+   <link rel="stylesheet" href="./css/style.css">
+   <link rel="stylesheet" href="./css/portifolio.css">
+   <link rel="stylesheet" href="./css/responsive.css">
    <script>document.documentElement.classList.add("js");</script>
 </head>
 
@@ -19,7 +19,7 @@
    <header class="header">
       <div class="container"">
          <a href=" index.html" class="grid-4">
-         <img src="/img/bikcraft.png" alt="Bikcraft">
+         <img src="./img/bikcraft.png" alt="Bikcraft">
          </a>
 
          <nav class="header_menu grid-12">
@@ -71,25 +71,25 @@
       <div class="container" data-slide="portifolio">
          <ul class="portifolio-items">
             <li class="grid-8">
-               <img src="/img/portifolio-hide.jpg" alt="Bikcraft Retro">
+               <img src="./img/portifolio-hide.jpg" alt="Bikcraft Retro">
             </li>
             <li class="grid-8">
-               <img src="/img/portifolio-retro.jpg" alt="Bikcraft Ride">
+               <img src="./img/portifolio-retro.jpg" alt="Bikcraft Ride">
             </li>
             <li class="grid-16">
-               <img src="/img/portifolio-sport.jpg" alt="Bikcraft Sport">
+               <img src="./img/portifolio-sport.jpg" alt="Bikcraft Sport">
             </li>
          </ul>
 
          <ul class="portifolio-items">
             <li class="grid-8">
-               <img src="/img/portifolio-retro.jpg" alt="Bikcraft Retro">
+               <img src="./img/portifolio-retro.jpg" alt="Bikcraft Retro">
             </li>
             <li class="grid-8">
-               <img src="/img/portifolio-hide.jpg" alt="Bikcraft Ride">
+               <img src="./img/portifolio-hide.jpg" alt="Bikcraft Ride">
             </li>
             <li class="grid-16">
-               <img src="/img/portifolio-sport.jpg" alt="Bikcraft Sport">
+               <img src="./img/portifolio-sport.jpg" alt="Bikcraft Sport">
             </li>
          </ul>
 
@@ -124,9 +124,9 @@
             <div class="grid-4 footer-socialmedia">
                <h3>SOCIAL NETWORK</h3>
                <ul>
-                  <li><a href="http://facebook.com" target="_blank"><img src="/img/network/facebook.svg" alt="facebook"></a></li>
-                  <li><a href="http://instagram.com" target="_blank"><img src="/img/network/instagram.svg" alt="facebook"></a></li>
-                  <li><a href="http://twitter.com" target="_blank"><img src="/img/network/twitter.svg" alt="facebook"></a></li>
+                  <li><a href="http://facebook.com" target="_blank"><img src="./img/network/facebook.svg" alt="facebook"></a></li>
+                  <li><a href="http://instagram.com" target="_blank"><img src="./img/network/instagram.svg" alt="facebook"></a></li>
+                  <li><a href="http://twitter.com" target="_blank"><img src="./img/network/twitter.svg" alt="facebook"></a></li>
                </ul>
             </div>
          </div>
