--- a/Web-Desing-Completo/bikcraft/product.html
+++ b/Web-Desing-Completo/bikcraft/product.html
@@ -6,12 +6,12 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Bikcraft - about</title>
-   <link rel="stylesheet" href="/css/normalize.css">
-   <link rel="stylesheet" href="/css/reset.css">
-   <link rel="stylesheet" href="/css/grid.css">
-   <link rel="stylesheet" href="/css/style.css">
-   <link rel="stylesheet" href="/css/product.css">
-   <link rel="stylesheet" href="/css/responsive.css">
+   <link rel="stylesheet" href="./css/normalize.css">
+   <link rel="stylesheet" href="./css/reset.css">
+   <link rel="stylesheet" href="./css/grid.css">
+   <link rel="stylesheet" href="./css/style.css">
+   <link rel="stylesheet" href="./css/product.css">
+   <link rel="stylesheet" href="./css/responsive.css">
    <script>document.documentElement.classList.add("js");</script>
 </head>
 
@@ -19,7 +19,7 @@
    <header class="header">
       <div class="container"">
          <a href=" index.html" class="grid-4">
-         <img src="/img/bikcraft.png" alt="Bikcraft">
+         <img src="./img/bikcraft.png" alt="Bikcraft">
          </a>
 
          <nav class="header_menu grid-12">
@@ -45,14 +45,14 @@
    <!--Section for Ride Products -->
    <section class="container product-item">
       <div class="grid-11">
-         <img src="/img/product-ride-title.jpg" alt="bikcraft ride">
+         <img src="./img/product-ride-title.jpg" alt="bikcraft ride">
          <h2>ride</h2>
       </div>
       <div class="grid-5 product-icon">
-         <img src="/img/icon/passeio.svg" alt="bikcraft ride">
+         <img src="./img/icon/passeio.svg" alt="bikcraft ride">
       </div>
       <div class="grid-8">
-         <img src="/img/product-ride.jpg" alt="bikcraft ride">
+         <img src="./img/product-ride.jpg" alt="bikcraft ride">
       </div>
       <div class="grid-8 product-info">
          <p>The real secret to happiness is having a genuine interest in all the details of everyday life. The real secret to happiness is having a genuine interest in all the details of everyday life.</p>
@@ -70,14 +70,14 @@
    <!--Section for Sport Products -->
    <section class="container product-item">
       <div class="grid-11">
-         <img src="/img/product-sport-title.jpg" alt="bikcraft sport">
+         <img src="./img/product-sport-title.jpg" alt="bikcraft sport">
          <h2>sport</h2>
       </div>
       <div class="grid-5 product-icon">
-         <img src="/img/icon/esporte.svg" alt="bikcraft sport">
+         <img src="./img/icon/esporte.svg" alt="bikcraft sport">
       </div>
       <div class="grid-8">
-         <img src="/img/product-sport.jpg" alt="bikcraft sport">
+         <img src="./img/product-sport.jpg" alt="bikcraft sport">
       </div>
       <div class="grid-8 product-info">
          <p>The real secret to happiness is having a genuine interest in all the details of everyday life. The real secret to happiness is having a genuine interest in all the details of everyday life.</p>
@@ -95,14 +95,14 @@
    <!--Section for Retro Products -->
    <section class="container product-item">
       <div class="grid-11">
-         <img src="/img/product-retro-title.jpg" alt="bikcraft retro">
+         <img src="./img/product-retro-title.jpg" alt="bikcraft retro">
          <h2>retro</h2>
       </div>
       <div class="grid-5 product-icon">
-         <img src="/img/icon/retro.svg" alt="bikcraft retro">
+         <img src="./img/icon/retro.svg" alt="bikcraft retro">
       </div>
       <div class="grid-8">
-         <img src="/img/product-retro.jpg" alt="bikcraft retro">
+         <img src="./img/product-retro.jpg" alt="bikcraft retro">
       </div>
       <div class="grid-8 product-info">
          <p>The real secret to happiness is having a genuine interest in all the details of everyday life. The real secret to happiness is having a genuine interest in all the details of everyday life.</p>
@@ -185,9 +185,9 @@
             <div class="grid-4 footer-socialmedia">
                <h3>SOCIAL NETWORK</h3>
                <ul>
-                  <li><a href="http://facebook.com" target="_blank"><img src="/img/network/facebook.svg" alt="facebook"></a></li>
-                  <li><a href="http://instagram.com" target="_blank"><img src="/img/network/instagram.svg" alt="facebook"></a></li>
-                  <li><a href="http://twitter.com" target="_blank"><img src="/img/network/twitter.svg" alt="facebook"></a></li>
+                  <li><a href="http://facebook.com" target="_blank"><img src="./img/network/facebook.svg" alt="facebook"></a></li>
+                  <li><a href="http://instagram.com" target="_blank"><img src="./img/network/instagram.svg" alt="facebook"></a></li>
+                  <li><a href="http://twitter.com" target="_blank"><img src="./img/network/twitter.svg" alt="facebook"></a></li>
                </ul>
             </div>
          </div>
