--- a/Web-Desing-Completo/bikcraft/about.html
+++ b/Web-Desing-Completo/bikcraft/about.html
@@ -6,12 +6,12 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Bikcraft - about</title>
-   <link rel="stylesheet" href="/css/normalize.css">
-   <link rel="stylesheet" href="/css/reset.css">
-   <link rel="stylesheet" href="/css/grid.css">
-   <link rel="stylesheet" href="/css/style.css">
-   <link rel="stylesheet" href="/css/about.css">
-   <link rel="stylesheet" href="/css/responsive.css">
+   <link rel="stylesheet" href="./css/normalize.css">
+   <link rel="stylesheet" href="./css/reset.css">
+   <link rel="stylesheet" href="./css/grid.css">
+   <link rel="stylesheet" href="./css/style.css">
+   <link rel="stylesheet" href="./css/about.css">
+   <link rel="stylesheet" href="./css/responsive.css">
    <script>document.documentElement.classList.add("js");</script>
 </head>
 
@@ -19,7 +19,7 @@
    <header class="header">
       <div class="container"">
          <a href=" index.html" class="grid-4">
-         <img src="/img/bikcraft.png" alt="Bikcraft">
+         <img src="./img/bikcraft.png" alt="Bikcraft">
          </a>
 
          <nav class="header_menu grid-12">
@@ -63,14 +63,14 @@
       </div>
 
       <div class="grid-16 about-img">
-         <img src="/img/about-img1.jpg" alt="">
+         <img src="./img/about-img1.jpg" alt="">
       </div>
 
    </section>
 
    <section class="quality container">
       <h2 class="subtitle">quality</h2>
-      <img src="/img/brand/bikcraft-qualidade.svg" alt="Bikcraft">
+      <img src="./img/brand/bikcraft-qualidade.svg" alt="Bikcraft">
       <ul class="quality-list">
          <li class="grid-1-3">
             <h3 class="subtitle">DURABILITY</h3>
@@ -116,9 +116,9 @@
             <div class="grid-4 footer-socialmedia">
                <h3>SOCIAL NETWORK</h3>
                <ul>
-                  <li><a href="http://facebook.com" target="_blank"><img src="/img/network/facebook.svg" alt="facebook"></a></li>
-                  <li><a href="http://instagram.com" target="_blank"><img src="/img/network/instagram.svg" alt="facebook"></a></li>
-                  <li><a href="http://twitter.com" target="_blank"><img src="/img/network/twitter.svg" alt="facebook"></a></li>
+                  <li><a href="http://facebook.com" target="_blank"><img src="./img/network/facebook.svg" alt="facebook"></a></li>
+                  <li><a href="http://instagram.com" target="_blank"><img src="./img/network/instagram.svg" alt="facebook"></a></li>
+                  <li><a href="http://twitter.com" target="_blank"><img src="./img/network/twitter.svg" alt="facebook"></a></li>
                </ul>
             </div>
          </div>
@@ -137,3 +137,4 @@
 </body>
 
 </html>
+
