--- a/Web-Desing-Completo/bikcraft/index.html
+++ b/Web-Desing-Completo/bikcraft/index.html
@@ -6,11 +6,11 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Bikcraft</title>
-   <link rel="stylesheet" href="/css/normalize.css">
-   <link rel="stylesheet" href="/css/reset.css">
-   <link rel="stylesheet" href="/css/grid.css">
-   <link rel="stylesheet" href="/css/style.css">
-   <link rel="stylesheet" href="/css/responsive.css">
+   <link rel="stylesheet" href="./css/normalize.css">
+   <link rel="stylesheet" href="./css/reset.css">
+   <link rel="stylesheet" href="./css/grid.css">
+   <link rel="stylesheet" href="./css/style.css">
+   <link rel="stylesheet" href="./css/responsive.css">
    <script>document.documentElement.classList.add("js");</script>
 </head>
 
@@ -18,7 +18,7 @@
    <header class="header">
       <div class="container"">
          <a href=" index.html" class="grid-4">
-         <img src="/img/bikcraft.png" alt="Bikcraft">
+         <img src="./img/bikcraft.png" alt="Bikcraft">
          </a>
 
          <nav class="header_menu grid-12">
@@ -41,7 +41,7 @@
             <p>"Have nothing in your house that you do not know to be useful, or believe to be beautiful"</p>
             <cite>WILLIAM MORRIS</cite>
          </blockquote>
-         <a data-anime="1500" href="/products.html" class="btn">PRICES</a>
+         <a data-anime="1500" href="./product.html" class="btn">PRICES</a>
       </div>
    </section>
 
@@ -50,7 +50,7 @@
       <ul class="products-list">
          <li class="grid-1-3">
             <div class="products-list-icon">
-               <img src="/img/icon/passeio.svg" alt="Bikecraft Ride">
+               <img src="./img/icon/passeio.svg" alt="Bikecraft Ride">
             </div>
             <h3>Ride</h3>
             <p>tempus egestas sed sed risus pretium quam vulputate dignissim suspendisse in</p>
@@ -59,7 +59,7 @@
 
          <li class="grid-1-3">
             <div class="products-list-icon">
-               <img src="/img/icon/esporte.svg" alt="Bikecraft Sport">
+               <img src="./img/icon/esporte.svg" alt="Bikecraft Sport">
             </div>
             <h3>sport</h3>
             <p>tempus egestas sed sed risus pretium quam vulputate dignissim suspendisse in</p>
@@ -68,7 +68,7 @@
 
          <li class="grid-1-3">
             <div class="products-list-icon">
-               <img src="/img/icon/retro.svg" alt="Bikecraft Retro">
+               <img src="./img/icon/retro.svg" alt="Bikecraft Retro">
             </div>
             <h3>retro</h3>
             <p>tempus egestas sed sed risus pretium quam vulputate dignissim suspendisse in</p>
@@ -77,7 +77,7 @@
 
       <div class="call-to-action">
          <p>Click for more product details.</p>
-         <a href="/products.html" class="btn btn-black">PRODUCTS</a>
+         <a href="./products.html" class="btn btn-black">PRODUCTS</a>
       </div>
    </section>
 
@@ -86,27 +86,27 @@
          <h2 class="subtitle">portifolio</h2>
          <ul class="portifolio-items">
             <li class="grid-8">
-               <img src="/img/portifolio-hide.jpg" alt="Bikcraft Retro">
+               <img src="./img/portifolio-hide.jpg" alt="Bikcraft Retro">
             </li>
             <li class="grid-8">
-               <img src="/img/portifolio-retro.jpg" alt="Bikcraft Ride">
+               <img src="./img/portifolio-retro.jpg" alt="Bikcraft Ride">
             </li>
             <li class="grid-16">
-               <img src="/img/portifolio-sport.jpg" alt="Bikcraft Sport">
+               <img src="./img/portifolio-sport.jpg" alt="Bikcraft Sport">
             </li>
          </ul>
       </div>
 
       <div class="call-to-action">
          <p>Learn more about our work.</p>
-         <a href="/portilofio.html" class="btn">PORTIFOLIO</a>
+         <a href="./portilofio.html" class="btn">PORTIFOLIO</a>
       </div>
 
    </section>
 
    <section class="quality container">
       <h2 class="subtitle">quality</h2>
-      <img src="/img/brand/bikcraft-qualidade.svg" alt="Bikcraft">
+      <img src="./img/brand/bikcraft-qualidade.svg" alt="Bikcraft">
       <ul class="quality-list">
          <li class="grid-1-3">
             <h3 class="subtitle">DURABILITY</h3>
@@ -124,7 +124,7 @@
 
       <div class="call-to-action">
          <p>Learn more about Bikcraft.</p>
-         <a href="/about.html" class="btn btn-black">about</a>
+         <a href="./about.html" class="btn btn-black">about</a>
       </div>
    </section>
 
@@ -156,9 +156,9 @@
             <div class="grid-4 footer-socialmedia">
                <h3>SOCIAL NETWORK</h3>
                <ul>
-                  <li><a href="http://facebook.com" target="_blank"><img src="/img/network/facebook.svg" alt="facebook"></a></li>
-                  <li><a href="http://instagram.com" target="_blank"><img src="/img/network/instagram.svg" alt="facebook"></a></li>
-                  <li><a href="http://twitter.com" target="_blank"><img src="/img/network/twitter.svg" alt="facebook"></a></li>
+                  <li><a href="http://facebook.com" target="_blank"><img src="./img/network/facebook.svg" alt="facebook"></a></li>
+                  <li><a href="http://instagram.com" target="_blank"><img src="./img/network/instagram.svg" alt="facebook"></a></li>
+                  <li><a href="http://twitter.com" target="_blank"><img src="./img/network/twitter.svg" alt="facebook"></a></li>
                </ul>
             </div>
          </div>
